--- a/Nautilus/index.html
+++ b/Nautilus/index.html
@@ -31,47 +31,47 @@
   <h1>Configura tu Nautilus</h1>
 
   <div class="configurador">
-    <img id="caja" src="cajas/Acero.png" alt="Caja">
-    <img id="dial" src="diales/Tiffany.png" alt="Dial">
-    <img id="manecillas" src="manecillas/Acero.png" alt="Manecillas">
-    <img id="correa" src="correas/Acero.png" alt="Correa">
+    <img id="caja" src="cajas/acero.png" alt="Caja">
+    <img id="dial" src="diales/tiffany.png" alt="Dial">
+    <img id="manecillas" src="manecillas/acero.png" alt="Manecillas">
+    <img id="correa" src="correas/acero.png" alt="Correa">
   </div>
 
   <!-- Menús -->
   <div>
     <label>Caja:</label>
     <select id="selectCaja">
-      <option value="cajas/Acero.png">Acero</option>
-      <option value="cajas/Negro.png">Negro</option>
-      <option value="cajas/Oro-rosa.png">Oro rosa</option>
+      <option value="cajas/acero.png">Acero</option>
+      <option value="cajas/negro.png">Negro</option>
+      <option value="cajas/oro-rosa.png">Oro rosa</option>
     </select>
   </div>
 
   <div>
     <label>Dial:</label>
     <select id="selectDial">
-      <option value="diales/Tiffany.png">Tiffany</option>
+      <option value="diales/tiffany.png">Tiffany</option>
     </select>
   </div>
 
   <div>
     <label>Manecillas:</label>
     <select id="selectManecillas">
-      <option value="manecillas/Acero.png">Acero</option>
-      <option value="manecillas/Negro.png">Negro</option>
-      <option value="manecillas/Oro-rosa.png">Oro rosa</option>
+      <option value="manecillas/acero.png">Acero</option>
+      <option value="manecillas/negro.png">Negro</option>
+      <option value="manecillas/oro-rosa.png">Oro rosa</option>
     </select>
   </div>
 
   <div>
     <label>Correa:</label>
     <select id="selectCorrea">
-      <option value="correas/Acero.png">Acero</option>
-      <option value="correas/Negro.png">Negro</option>
-      <option value="correas/Oro-rosa.png">Oro rosa</option>
-      <option value="correas/Cuero-azul.png">Cuero Azul</option>
-      <option value="correas/Cuero-marron.png">Cuero Marrón</option>
-      <option value="correas/Cuero-negro.png">Cuero Negro</option>
+      <option value="correas/acero.png">Acero</option>
+      <option value="correas/negro.png">Negro</option>
+      <option value="correas/oro-rosa.png">Oro rosa</option>
+      <option value="correas/cuero-azul.png">Cuero Azul</option>
+      <option value="correas/cuero-marron.png">Cuero Marrón</option>
+      <option value="correas/cuero-negro.png">Cuero Negro</option>
     </select>
   </div>
 
