--- a/Nautilus/index.html
+++ b/Nautilus/index.html
@@ -9,18 +9,21 @@
       text-align: center;
       background: #f5f5f5;
     }
-    .configurador {
-      position: relative;
-      width: 300px;
-      height: 300px;
-      margin: 20px auto;
-    }
-    .configurador img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-    }
+  .configurador {
+  position: relative;
+  width: 300px;   /* tamaño fijo */
+  height: 300px;
+  margin: 20px auto;
+}
+
+.configurador img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;    /* todas las imágenes ocuparán el mismo ancho */
+  height: 100%;   /* todas las imágenes ocuparán el mismo alto */
+  object-fit: contain; /* evita que se deforme la imagen */
+}
     select {
       margin: 10px;
       padding: 5px;
